# l10n_traceback

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build_and_publish.yml  publish.yml  test.yml
l10n_traceback/: __init__.py  color.py  error.py
tests/: test_error.py
